- Forum screen created

--- a/app/src/main/res/drawable/receive_row_drawable.xml
+++ b/app/src/main/res/drawable/receive_row_drawable.xml
@@ -4,11 +4,11 @@
 
     <!-- View background color -->
     <solid
-            android:color="#839192" >
+            android:color="@color/colorPrimary" >
     </solid>
 
     <!-- The radius makes the corners rounded -->
     <corners
-            android:radius="10dp">
+            android:radius="50dp">
     </corners>
 </shape>
