--- a/app/src/main/res/layout/sign_in_layout.xml
+++ b/app/src/main/res/layout/sign_in_layout.xml
@@ -1,31 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:padding="16dp"
-        android:background="#E5E7E9"
-        android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <ImageView
-            android:id="@+id/imgChat"
-            android:layout_width="80dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="50dp"
-            android:layout_gravity="center_horizontal"
-            app:srcCompat="@drawable/ic_chat"/>
+        android:id="@+id/imgChat"
+        android:layout_width="80dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dp"
+        app:srcCompat="@drawable/tata_logo" />
 
     <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txtInputUserName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter email ID"
-            app:errorEnabled="true"
-            app:hintEnabled="true"
-            android:textColorHint="#000000"
-            android:layout_marginTop="24dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
+        android:id="@+id/txtInputUserName"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:hint="Enter email ID"
+        android:textColorHint="#000000"
+        app:errorEnabled="true"
+        app:hintEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtUserName"
@@ -42,30 +41,30 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txtInputPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter Password"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:errorEnabled="true"
-            app:hintEnabled="true"
-            app:passwordToggleEnabled="true"
-            android:textColorHint="#000000"
-            app:layout_constraintRight_toRightOf="parent"
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-            app:layout_constraintTop_toBottomOf="@id/txtInputUserName">
+        android:id="@+id/txtInputPassword"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter Password"
+        android:textColorHint="#000000"
+        app:errorEnabled="true"
+        app:hintEnabled="true"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtInputUserName"
+        app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:textSize="14sp"
-                android:textColor="#000000"
-                android:fontFamily="@font/open_sans"
-                android:drawablePadding="8dp"
-                android:imeOptions="actionNext"/>
+            android:id="@+id/edtPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="8dp"
+            android:fontFamily="@font/open_sans"
+            android:imeOptions="actionNext"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:textColor="#000000"
+            android:textSize="14sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -76,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="24dp"
-        android:background="#5DADE2"
+        android:background="@color/colorPrimaryDark"
         android:fontFamily="@font/open_sans_bold"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
@@ -86,15 +85,15 @@
         app:cornerRadius="30dp" />
 
     <TextView
-            android:id="@+id/lblSignUp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/don_t_have_an_account_sign_up"
-            android:padding="8dp"
-            android:textColor="#000000"
-            android:textSize="14sp"
-            android:layout_marginTop="16dp"
-            android:layout_gravity="center_horizontal"
-            android:fontFamily="@font/open_sans"/>
+        android:id="@+id/lblSignUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/open_sans"
+        android:padding="8dp"
+        android:text="@string/don_t_have_an_account_sign_up"
+        android:textColor="#000000"
+        android:textSize="14sp" />
 
 </LinearLayout>
