--- a/app/src/main/res/layout/chat_forums_layout.xml
+++ b/app/src/main/res/layout/chat_forums_layout.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <data>
         <variable
             name="model"
             type="com.chatapp.chats.models.ForumModel" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#10000000">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tvForumName"
@@ -17,16 +18,30 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:fontFamily="@font/open_sans_bold"
+            android:fontFamily="@font/open_sans"
             android:gravity="start"
             android:maxLines="2"
             android:text="@{model.forumName}"
             android:textColor="#000000"
             android:textSize="18sp"
+            app:layout_constraintRight_toLeftOf="@id/tvForumCategory"
             android:layout_marginTop="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvForumCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{model.forumTopic}"
+            android:textSize="14sp"
+            app:layout_constraintLeft_toRightOf="@id/tvForumName"
+            app:layout_constraintTop_toTopOf="@id/tvForumName"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textColor="@android:color/white"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/sender_row_drawable"/>
 
         <TextView
             android:id="@+id/tvForumDescription"
@@ -45,54 +60,44 @@
 
         <TextView
             android:id="@+id/tvForumCreator"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/open_sans"
             android:maxLines="1"
             android:text="@{model.createrName}"
-            android:textColor="#80000000"
+            android:textColor="#000000"
             android:textSize="12sp"
+            app:layout_constraintRight_toLeftOf="@id/tvForumCreatedTime"
             app:layout_constraintLeft_toLeftOf="@id/tvForumName"
             app:layout_constraintTop_toBottomOf="@id/tvForumDescription" />
 
         <TextView
             android:id="@+id/tvForumCreatedTime"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:maxLines="1"
-            android:text="31/10"
-            android:textColor="#80000000"
+            android:text="@{model.formattedDate}"
+            android:textColor="#000000"
             android:textSize="12sp"
+            android:gravity="end"
             app:layout_constraintBottom_toBottomOf="@id/tvForumCreator"
             app:layout_constraintLeft_toRightOf="@id/tvForumCreator"
-            app:layout_constraintTop_toTopOf="@id/tvForumCreator" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tvForumCreator"
+            android:layout_marginRight="16dp"/>
 
-        <TextView
-            android:id="@+id/tvNumberOfComments"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:drawableLeft="@drawable/ic_chat"
-            android:drawablePadding="4dp"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:text="4000K"
-            android:textColor="#80000000"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@id/tvForumCreator"
-            app:layout_constraintRight_toRightOf="@id/tvForumName"
-            app:layout_constraintTop_toTopOf="@id/tvForumCreator" />
 
         <View
             android:layout_width="0dp"
             android:layout_height="1dp"
-            app:layout_constraintTop_toBottomOf="@id/tvNumberOfComments"
+            app:layout_constraintTop_toBottomOf="@id/tvForumCreatedTime"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="16dp"
             android:background="#20000000"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
