--- a/app/src/main/res/layout/forum_listing_layout.xml
+++ b/app/src/main/res/layout/forum_listing_layout.xml
@@ -10,13 +10,14 @@
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/ic_add"/>
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_margin="16dp"
+        app:srcCompat="@drawable/ic_chat" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
