--- a/app/src/main/res/menu/bottom_bar_menu.xml
+++ b/app/src/main/res/menu/bottom_bar_menu.xml
@@ -1,21 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.chatapp.MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item android:id="@+id/list"
         android:title="List"
         android:checked="true"
         android:icon="@drawable/ic_list"
+        android:orderInCategory="100"
         app:showAsAction="always"/>
 
     <item android:id="@+id/add"
         android:title="Add"
         android:checked="false"
         android:icon="@drawable/ic_add"
+        android:orderInCategory="100"
         app:showAsAction="always"/>
 
-    <item android:id="@+id/log_out"
-        android:title="@string/log_out"
+    <item android:id="@+id/chat"
+        android:title="Profile"
+        android:checked="false"
+        android:icon="@drawable/ic_chat"
         android:orderInCategory="100"
-        app:showAsAction="never"/>
+        app:showAsAction="always"/>
+
 </menu>
