Forum chat screen done, Tata logo changed

--- a/app/src/main/res/layout/chat_screen_layout.xml
+++ b/app/src/main/res/layout/chat_screen_layout.xml
@@ -69,6 +69,7 @@
                     android:layout_marginTop="8dp"/>
 
                 <TextView
+                    android:id="@+id/tvForumDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans"
@@ -113,32 +114,32 @@ We believe that most of you are familiar with our beta program. Here, you can ge
 
     </androidx.core.widget.NestedScrollView>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:padding="8dp">
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="bottom"-->
+<!--        android:padding="8dp">-->
 
-        <ImageView
-            android:id="@+id/imgSend"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_send"
-            app:layout_constraintLeft_toRightOf="@id/edtSendMessage"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+<!--        <ImageView-->
+<!--            android:id="@+id/imgSend"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:srcCompat="@drawable/ic_send"-->
+<!--            app:layout_constraintLeft_toRightOf="@id/edtSendMessage"-->
+<!--            app:layout_constraintRight_toRightOf="parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->
 
-        <EditText
-            android:id="@+id/edtSendMessage"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/imgSend"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:hint="Enter message here"/>
+<!--        <EditText-->
+<!--            android:id="@+id/edtSendMessage"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="bottom"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintRight_toLeftOf="@id/imgSend"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            android:hint="Enter message here"/>-->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
