--- a/app/src/main/res/layout/sign_in_layout.xml
+++ b/app/src/main/res/layout/sign_in_layout.xml
@@ -9,11 +9,11 @@
 
     <ImageView
         android:id="@+id/imgChat"
-        android:layout_width="80dp"
-        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:layout_height="80dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
-        app:srcCompat="@drawable/tata_logo" />
+        app:srcCompat="@drawable/tata_digital_logo" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txtInputUserName"
