--- a/app/src/main/res/layout/forum_creation_layout.xml
+++ b/app/src/main/res/layout/forum_creation_layout.xml
@@ -59,6 +59,16 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtForum"/>
 
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="#30000000"
+        android:layout_marginTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/spinnerSuggestion"/>
+
     <EditText
         android:id="@+id/edtDescription"
         android:layout_width="0dp"
@@ -73,7 +83,17 @@
         android:padding="8dp"
         app:layout_constraintLeft_toLeftOf="@id/edtForum"
         app:layout_constraintRight_toRightOf="@id/edtForum"
-        app:layout_constraintTop_toBottomOf="@id/spinnerSuggestion"
+        app:layout_constraintTop_toBottomOf="@id/divider2"
         app:layout_constraintBottom_toTopOf="@id/btnCreateForum"/>
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
