--- a/app/src/main/res/layout/forum_listing_layout.xml
+++ b/app/src/main/res/layout/forum_listing_layout.xml
@@ -20,4 +20,14 @@
         android:layout_margin="16dp"
         app:srcCompat="@drawable/ic_chat" />
 
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
