--- a/app/src/main/res/layout/chat_screen_layout.xml
+++ b/app/src/main/res/layout/chat_screen_layout.xml
@@ -1,104 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<LinearLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginBottom="12dp"
+    android:orientation="vertical">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:fitsSystemWindows="true">
+        android:layout_height="?attr/actionBarSize"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_collapseMode="pin"
+        android:background="@color/colorPrimaryDark"
+        app:titleTextColor="@android:color/white"
+        app:layout_scrollFlags="scroll|enterAlways">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsingToolbar"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:contentScrim="@color/colorPrimary"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp"
-            android:fitsSystemWindows="true">
+            android:orientation="horizontal">
 
-            <LinearLayout
+            <ImageView
+                android:id="@+id/imgBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_back"
+                android:layout_gravity="center_vertical"/>
+
+            <TextView
+                android:id="@+id/toolbarTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax"
-                android:layout_margin="16dp">
+                android:textColor="@android:color/white"
+                android:layout_gravity="center_vertical"
+                android:text="@string/app_name"
+                android:fontFamily="@font/open_sans_bold"
+                android:textSize="20sp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginEnd="16dp"
+                android:layout_marginLeft="16dp"/>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tvForumTitle"
-                    android:text="We Want You!! Closed Beta Testers for the OnePlus TV"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp"
-                    android:maxLines="2"
-                    android:fontFamily="@font/open_sans"/>
+        </LinearLayout>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Created by Steven X, Friday 6/12/14"
-                    android:textSize="14sp"
-                    android:layout_marginTop="8dp"
-                    android:textColor="@android:color/darker_gray"
-                    android:fontFamily="@font/open_sans"
-                    android:id="@+id/tvCreator"/>
+    </androidx.appcompat.widget.Toolbar>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Technology"
-                    android:textSize="14sp"
-                    android:layout_marginTop="8dp"
-                    android:textColor="@android:color/white"
-                    android:fontFamily="@font/open_sans"
-                    android:id="@+id/tvForumType"
-                    android:background="@drawable/sender_row_drawable"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Description"
-                    android:textColor="@color/colorAccent"
-                    android:layout_marginTop="8dp"/>
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@android:color/transparent"-->
+<!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
+<!--        android:fitsSystemWindows="true">-->
 
-                <TextView
-                    android:id="@+id/tvForumDescription"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/open_sans"
-                    android:textSize="14sp"
-                    android:layout_marginTop="8dp"
-                    android:text="Hey everyone,\nOnePlus TV has been on the market for a while now, and it's now time to start its Closed Beta Program. Before a new stable version is released, it will be early released to a selected group of beta testers, allowing them to experience new features, provide feedback and report any bugs.
-We believe that most of you are familiar with our beta program. Here, you can get new (and sometimes experimental) features, and give us initial feedback on new features. These builds may lack the stability of polished software, but offer early access. New features often come to Closed Beta builds weeks or months before going public."
-                    android:textColor="@android:color/black" />
+<!--&lt;!&ndash;        <com.google.android.material.appbar.CollapsingToolbarLayout&ndash;&gt;-->
+<!--&lt;!&ndash;            android:id="@+id/collapsingToolbar"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_height="match_parent"&ndash;&gt;-->
+<!--&lt;!&ndash;            app:layout_scrollFlags="scroll|exitUntilCollapsed"&ndash;&gt;-->
+<!--&lt;!&ndash;            app:contentScrim="@color/colorPrimary"&ndash;&gt;-->
+<!--&lt;!&ndash;            app:expandedTitleMarginStart="48dp"&ndash;&gt;-->
+<!--&lt;!&ndash;            app:expandedTitleMarginEnd="64dp"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:fitsSystemWindows="true">&ndash;&gt;-->
 
-                <View
-                    android:layout_width="wrap_content"
-                    android:layout_height="1dp"
-                    android:background="@android:color/darker_gray"
-                    android:layout_marginTop="16dp"/>
 
-            </LinearLayout>
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin"
-                app:titleTextColor="@android:color/white"
-                app:layout_scrollFlags="scroll|enterAlways"/>
+<!--&lt;!&ndash;        </com.google.android.material.appbar.CollapsingToolbarLayout>&ndash;&gt;-->
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-    </com.google.android.material.appbar.AppBarLayout>
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
 
 <!--    <androidx.core.widget.NestedScrollView-->
 <!--        android:id="@+id/scroll"-->
@@ -133,5 +104,75 @@ We believe that most of you are familiar with our beta program. Here, you can ge
 
 <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:fitsSystemWindows="true"
+            app:layout_collapseMode="parallax"
+            android:layout_margin="16dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvForumTitle"
+                android:text="We Want You!! Closed Beta Testers for the OnePlus TV"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:maxLines="2"
+                android:fontFamily="@font/open_sans"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Created by Steven X, Friday 6/12/14"
+                android:textSize="14sp"
+                android:layout_marginTop="8dp"
+                android:textColor="@android:color/darker_gray"
+                android:fontFamily="@font/open_sans"
+                android:id="@+id/tvCreator"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Technology"
+                android:textSize="14sp"
+                android:layout_marginTop="8dp"
+                android:textColor="@android:color/white"
+                android:fontFamily="@font/open_sans"
+                android:id="@+id/tvForumType"
+                android:background="@drawable/sender_row_drawable"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:textColor="@color/colorAccent"
+                android:layout_marginTop="8dp"/>
+
+            <TextView
+                android:id="@+id/tvForumDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/open_sans"
+                android:textSize="14sp"
+                android:layout_marginTop="8dp"
+                android:text="Hey everyone,\nOnePlus TV has been on the market for a while now, and it's now time to start its Closed Beta Program. Before a new stable version is released, it will be early released to a selected group of beta testers, allowing them to experience new features, provide feedback and report any bugs.
+We believe that most of you are familiar with our beta program. Here, you can get new (and sometimes experimental) features, and give us initial feedback on new features. These builds may lack the stability of polished software, but offer early access. New features often come to Closed Beta builds weeks or months before going public."
+                android:textColor="@android:color/black" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"
+                android:layout_marginTop="16dp"/>
+
+        </LinearLayout>
+
+    </ScrollView>
+</LinearLayout>
